force-app/main/default/objects/Trading_Name__c/Trading_Name__c.object-meta.xml
<CustomObject>
    <label>Trading Name</label>
    <nameField>
        <displayFormat>TN-{0000000}</displayFormat>
        <label>Trading Name Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trading Names</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>