force-app/main/default/objects/Trading_Name__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Trading Names</relationshipLabel>
    <relationshipName>Trading_Names</relationshipName>
    <type>Lookup</type>
</CustomField>