force-app/main/default/objects/Trading_Name__c/fields/Need_To_Inactive__c.field-meta.xml
<CustomField>
    <fullName>Need_To_Inactive__c</fullName>
    <description>This is a field that boost the flow. It shouldn&apos;t be seen by any user. If it is true, it means that this record shoud be changed to inactive.</description>
    <formula>if(TODAY()&gt;Date_Effective_To__c,&apos;Inactive&apos;,&apos;Active&apos;)!= RecordType.DeveloperName</formula>
    <label>Need To update</label>
    <type>Checkbox</type>
</CustomField>