force-app/main/default/objects/Trading_Name__c/recordTypes/Inactive.recordType-meta.xml
<RecordType>
    <fullName>Inactive</fullName>
    <active>true</active>
    <label>Inactive</label>
</RecordType>