force-app/main/default/objects/Trading_Name__c/validationRules/DateEffectiveToMustBeAfterFromDate.validationRule-meta.xml
<ValidationRule>
    <fullName>DateEffectiveToMustBeAfterFromDate</fullName>
    <active>true</active>
    <description>Date Effective To must be after Date Effective From Date</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Date_Effective_To__c)),Date_Effective_To__c&lt;Date_Effective_From__c )</errorConditionFormula>
    <errorDisplayField>Date_Effective_To__c</errorDisplayField>
    <errorMessage>Date Effective To  date must be after Date Effective From date</errorMessage>
</ValidationRule>