force-app/main/default/objects/Trading_Name__c/validationRules/Not_Change_Trading_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_Change_Trading_Name</fullName>
    <active>true</active>
    <description>User can not change trading name when a trading name is inactive.</description>
    <errorConditionFormula>AND(
 ISCHANGED( Name ) ,
 RecordType.DeveloperName = &apos;Inactive&apos;

)</errorConditionFormula>
    <errorMessage>You can not modify trading name when it is inactive.</errorMessage>
</ValidationRule>